project.html is modified

--- a/project.html
+++ b/project.html
@@ -61,7 +61,7 @@
                     <img src="mywork4.png" onmouseover="show3()" onmouseleave="Noshow3()">
                     <div class="context4">
                     <h3>BookSky</h3>
-                    <p>developed and deployed the BookSky web application,enabling users to conveniently manage their book collections through a user-friendly interface</p>
+                    <p>developed a BookSky web application,enabling users to conveniently manage their book collections </p>
                     <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
                 </div>
